evidence/v0.12.68/browser/README.md
# Windows v0.12.68 stock-Chrome acceptance

This directory defines the release gate for the v0.12.68 browser extension and
packaged Windows helper. It is protocol infrastructure, not passing evidence.
Passing evidence exists only when the checked-in coordinator creates one fresh,
candidate-bound `browser-acceptance.json` from a completed run.

The sole exact v0.12.67 candidate passed the Windows trust gate and
protocol-bound helper readiness, then its operator-dependent foreground-arm
gate expired with no mouse-down, mouse-up, or acknowledgement. The run failed
closed before observation or any product action and is terminal. Version
0.12.68 removes that operator action from Windows readiness. The runner accepts
only consecutive native samples proving that the existing user-owned
foreground and focus root remains stable and outside the dedicated fixture
process while the fixture stays nonactivating in the background. It does not
raise or activate the fixture, synthesize input, or wait for an operator. It
publishes matching schema-v3 request and ready-proof records under the legacy
foreground-arm filenames, and the read-only watcher validates both
automatically. Those records remain notification-only and grant no consent or
action authority. The new version requires fresh source, candidate bytes,
reservation, and evidence; no v0.12.67 byte or result can satisfy this gate.

The sole exact v0.12.66 candidate was built from
`2dcc8eccebaed6837a3eb71012e4826d7e9de922`. Both packaged macOS lanes passed,
but its one-shot Windows reservation was consumed when the recovery suite's
initial `computer.share.start` exceeded the helper's 12-second command
watchdog. No named injected-fault event or replacement-worker causality was
retained, so that run does not prove that the injected failure occurred. A
later prelaunch correctly refused the existing reservation. Stock-Chrome
acceptance, evidence publication, tagging, and a public Release did not follow.
Version 0.12.68 bounds WGC startup and startup rollback below the outer helper
watchdog, observes the exact injected-fault event before classifying the
asynchronous response, and requires a fresh connector after
`COMPUTER_HELPER_WATCHDOG`. It uses fresh source, candidate bytes, reservations,
and evidence; no v0.12.66 byte or result can satisfy this gate.

The sole exact v0.12.65 candidate was withdrawn during its one-shot Windows
computer acceptance. The recovery-suite `computer.share.start` command returned
`COMMAND_OUTCOME_UNKNOWN` after the helper connection ended once the command had
been enqueued, so the coordinator failed closed and permanently disallowed a
retry. The sanitized terminal record is frozen at
[`withdrawn-9a18c44-windows-share-start-outcome-unknown`](https://github.com/flrngel/local-browser-bridge/tree/bf8dbe595e7c7beb9a0817f0262fde46c1e49578/evidence/v0.12.65/computer/attempts/withdrawn-9a18c44-windows-share-start-outcome-unknown).
Stock-Chrome acceptance, tagging, and publication did not follow. Version
0.12.68 requires fresh source, candidate bytes, reservation, and evidence; no
v0.12.65 byte or result can satisfy this gate.

Version 0.12.57 stopped at a local macOS diagnostic before any GitHub
candidate, Windows, or Chrome execution. A native source frame advanced while
the harness collected cancellation baselines, and the server correctly refused
the retired authority as `COMPUTER_STALE_FRAME`. Version 0.12.68 refreshes the
exact share frame after those baselines and reports any future early refusal
directly. No v0.12.57 local package or diagnostic byte can satisfy this fresh
gate.

Version 0.12.56 stopped at a local macOS diagnostic before any GitHub
candidate, Windows, or Chrome execution. Its exact-view tracking observer was
timing-dependent: the first run missed a target-routed move, while an unchanged
package later passed all 207 checks. Version 0.12.57 observes the exact
window-number-bound event at `NSWindow.sendEvent`. No v0.12.56 local package or
diagnostic byte can satisfy this fresh gate.

Version 0.12.55 stopped at a local macOS diagnostic before any GitHub
candidate, Windows, or Chrome execution. The fixture's movement observer had
no exact-view tracking area and depended on first-responder routing. Version
0.12.56 installed that tracking area before the remaining window-boundary race
was exposed. No v0.12.55 local package or diagnostic byte can satisfy this
fresh gate.

Version 0.12.54 stopped at a source-built macOS diagnostic before any GitHub
candidate, Windows, or Chrome execution. AX state alone did not commit the
requested AppKit event receiver for a trajectory. Version 0.12.68 adds the
bounded target-only make-key commit and post-commit phase proof. No v0.12.54
local package or diagnostic byte can satisfy this fresh gate.

The exact v0.12.53 candidate never reached Windows or Chrome. Its source and
artifact gates passed, but the packaged macOS quiet lane stopped when a
cancellation-bound `computer.move` raced the target receiver and did not
advance the exact fixture's instrumentation. Version 0.12.68 re-proves the
requested-active receiver immediately before every trajectory event. No
v0.12.53 candidate byte or diagnostic record can satisfy this fresh gate.

The exact v0.12.52 candidate never reached Windows or Chrome. Its packaged
macOS quiet lane passed 158 checks and retained six reviewed screenshots, then
failed closed when an inactive exact-window `computer.move` did not advance
the target fixture's mouse-move instrumentation within the bounded dispatch
proof. Version 0.12.53 added the bounded target-receiver lease for that path.
No v0.12.52 candidate byte or diagnostic record can satisfy this fresh gate.

The sole exact v0.12.50 candidate passed its fresh packaged quiet macOS lane
and mandatory six-image review, then was withdrawn when the coordinator gave
the deliberate runner a nonexistent scratch parent. The runner stopped before
any deliberate-lane candidate byte or app-share UI action. The remote Windows
task was immediately told to stop, so no retained v0.12.50 Windows or Chrome
result can satisfy this gate. Version 0.12.68 requires fresh candidate bytes
and evidence.

The exact v0.12.49 candidate passed both fresh packaged macOS lanes. Its
one-shot Windows run then stopped before any Computer Use or Chrome action:
the authenticated disposable helper worker was connected and protocol-bound,
but the readiness probe's redundant Toolhelp basename filter returned zero
exact-image children. Version 0.12.50 removed that advisory prefilter while
retaining the exact supervisor binding, live volume/file identity, worker PID,
protocol session, interactive session, and stable consecutive observations.
Version 0.12.68 retains the repair. No v0.12.49 or v0.12.50 binary or result is
reusable by this fresh gate.

The exact v0.12.42 candidate never reached Windows or Chrome. Its macOS
pre-execution package preparer rejected the intentionally added
`Local Browser Bridge.app` desktop-host bundle because the acceptance inventory
still described the earlier archive layout. No candidate executable, UI
action, screenshot, evidence aggregate, tag, or Release followed. Version
0.12.68 aligns the bounded acceptance inventory and tests with the shipped
archive; it reuses none of the withdrawn candidate's bytes or evidence.

The immutable v0.12.26 candidate was withdrawn twice before stock-Chrome
acceptance. Attempt 1 stopped in the macOS quiet lane after an independently
corroborated shared-seat pointer event during native `typeText`. Attempt 2
stopped before any candidate execution when the trust verifier rejected two
otherwise-valid attestations for the byte-identical extension, one from each
workflow attempt. Version 0.12.27 corrected that defect by validating every
returned statement's exact source, tag, workflow, GitHub-hosted runner,
same-run, and subject identity, then requiring exactly one current-attempt
statement. Zero, duplicate-current, malformed, wrong-subject, and other-run
results fail closed.

The exact v0.12.27 candidate passed both packaged macOS lanes and their
independent audit. Its Windows trust, source, parser, and self-tests also
passed, but an ad-hoc external launcher lost the repository runner's stdout,
stderr, exit code, and process-start telemetry before an evidence directory
appeared. Because the runner probes both packaged executables before creating
that directory, candidate-byte execution could neither be proved nor excluded.
The attempt was therefore terminal outcome-unknown and the version was
withdrawn without a Computer Use action, stock-Chrome run, evidence commit,
approval, or public Release. Version 0.12.68 retains the exact-attempt trust
rules and the checked-in coordinator's source-only nested-Job ownership
boundary. Version 0.12.34 introduced explicit breakaway for the detached-worker
guard and named lifetime Jobs plus atomic private Job-list creation for each
runner-owned child. Its trust gate and both fresh macOS lanes passed, but the
Windows session was interrupted after its old pre-coordinator reservation and
before any observable coordinator directory, product process, UI action, or
Chrome action; the version was withdrawn without retry or publication. Version
0.12.68 retains that Job topology and moves the schema-2 reservation to the
worker's last pre-intent boundary after staging, guard ownership, and runner
preparation. The reservation is bound to an opaque coordinator instance, so a
later coordinator cannot rewrite an earlier coordinator's local pre-boundary
history. Recovery remains serialized by the stable admission mutex and one
monotonic deadline. A raced same-name Job is never adopted, configured,
terminated, retained, or retried.

The Windows-native non-product self-test covers all clean, recovery, delayed
handle, timeout, create-race, guard-transfer, descendant-cleanup, control-process,
and stream-cleanup scenarios with unique test-only names. It launches no
candidate and performs no Chrome action. Windows readiness is automatic and
requires a stable foreground and focus root in the runner's current interactive session outside the fixture
process while the fixture remains nonactivating and in the background. The
legacy-named `operator/foreground-arm-request.json` and
`operator/foreground-arm-received.json` files retain the automatic matching
request and ready proof; the read-only watcher validates them without a click,
manual relay, or operator action. Every marker and `Follow` projection remains
notification-only with `uiActionAllowed: false` and grants no consent or action
authority. No v0.12.26, v0.12.27, or v0.12.67 candidate byte, result,
screenshot, approval, or receipt is reused. Fresh packaged Windows and
stock-Chrome acceptance remain mandatory.

v0.12.21 was withdrawn before any candidate execution or publication
after review found that the macOS fetch binder could execute the candidate's
`--version` and `--licenses` paths before the quiet-seat gate.

The exact v0.12.22 candidate later failed closed in its first quiet macOS action
because a keyboard-aware independent classifier was incorrectly applied to the
pointer-only sealed action record. The action itself was Confirmed and its
route, focus, pointer, and Space fields were safe. Deliberate macOS, Windows,
and stock-Chrome never started; publication was canceled and no v0.12.22
Release exists. No v0.12.22 binary, screenshot, result, or approval may be
reused for this v0.12.68 run.

The exact v0.12.23 candidate then passed its packaged quiet macOS lane and
reached the deliberate lane's exact app-share start receipt, but its runner
reused a stream frame older than the three-second product-authority lease. The
helper correctly refused `computer.click` with `COMPUTER_STALE_FRAME` before
dispatch. Windows and stock-Chrome never started, publication was canceled,
and no v0.12.23 Release exists. Its retained negative record cannot satisfy or
be reused by v0.12.68.

The exact v0.12.31 candidate never reached Windows or stock-Chrome acceptance.
Its quiet macOS lane passed, but its deliberate lane failed closed before
product dispatch when the post-receipt fresh-frame gate timed out. No aggregate,
approval, evidence commit for a release, tag, or GitHub Release followed. Its
withdrawn 20-file record is frozen at commit
[`d33a66c65522380d7bdc310e532f5db6575f5f32`](https://github.com/flrngel/local-browser-bridge/commit/d33a66c65522380d7bdc310e532f5db6575f5f32)
and cannot satisfy any v0.12.68 browser gate.

The exact v0.12.32 candidate passed trust and package inspection, then its
source-compiled macOS app-share self-test failed on an extra stdout line before
permission probes, quiet-seat stabilization, or any candidate process launch.
No screenshot, operator marker, aggregate, Windows run, Chrome run, tag, or
Release followed. Its two generated files are frozen at commit
[`9bece01635e4296fbb3ff0f3651100245c5d7729`](https://github.com/flrngel/local-browser-bridge/tree/9bece01635e4296fbb3ff0f3651100245c5d7729/evidence/v0.12.32/computer/attempts/withdrawn-05c565c-macos-app-share-handoff-self-test-failure)
and cannot satisfy or be reused by any v0.12.68 browser gate.

The exact v0.12.33 candidate passed both fresh packaged macOS lanes. Its one
Windows attempt then failed closed at `build-dedicated-fixture` before a fixture
executable, candidate product process, Chrome action, tag, or Release existed.
The sanitized terminal record is retained at
[`withdrawn-81bda2a-windows-fixture-build-failure`](../../v0.12.33/computer/attempts/withdrawn-81bda2a-windows-fixture-build-failure/README.md).
No v0.12.33 byte, result, screenshot, or marker can satisfy v0.12.68.

Versions v0.12.11 through v0.12.13 were withdrawn before Windows stock-Chrome
acceptance completed. Their candidate bytes, screenshots, approvals, operator
messages, and evidence cannot be reused for v0.12.68. An interrupted or failed
v0.12.68 attempt is preserved only as sanitized negative metadata and is never
resumed or rerun against the same frozen candidate.

## Test boundary

Use the ordinary user's installed Google Chrome, existing profile and signed-in
state, one new dedicated Chrome window, and one fresh test-owned extension
directory. The executor opens `chrome://extensions`, invokes Chrome's native
**Load unpacked** picker, and selects only the byte-verified candidate directory.
Do not relaunch Chrome with flags, create a test profile, enable remote
debugging, call CDP directly, use `--load-extension`, or mutate an existing
Local Browser Bridge identity.
The accepted installation path is Chrome's native **Load unpacked** picker.

Local Browser Bridge owns `chrome.debugger` while its browser lease is active.
Chrome allows only one debugger client per tab, so Chrome MCP must not attach
during that lease. A passing record requires:

- `debuggerOwnerDuringBridgeLease: local-browser-bridge-extension`;
- `competingDebuggerAttachmentAllowed: false`;
- `chromeMcpUsedDuringBridgeLease: false`; and
- `chromeMcpReleaseEvidenceClaimed: false`.

The Local Browser Bridge API executes the browser-method matrix. The exact
candidate-bound helper uses only the authenticated loopback API for stock-Chrome
UI, the native picker, the extension popup, exact-window sharing, native input,
and retained screenshots. External orchestration is not credited as product
control or screenshot capture. Its exact retained orchestration identity is
`user-orchestrator-secured-ssh-exported-file-review`: the user-facing
orchestrator coordinates the interactive-session executor over pinned secured
SSH, while the independent reviewer reads only exported files.

Two create-once records conforming to
[`external-surface-attestation.schema.json`](external-surface-attestation.schema.json)
bound that exclusion honestly. The preflight record is a point-in-time statement
that Chrome MCP was not used and every Computer Use app-share was released before
candidate execution. The postflight record, written only after all six independent
reviews finish, states that Chrome MCP was never used through review, no Computer
Use share was resumed, and the reviewer used exported digest-bound files only.
The reviewer reads those exported files through the filesystem and never needs a
Computer Use share. Both
records contain the exact release-candidate binding and its canonical SHA-256 and
must use the same orchestrator session reference later used to deliver the scoped
user approval. They are orchestration attestations, not cryptographic proof of a
different Windows identity.

## One scoped action-time approval

The only browser-control safety confirmation is one batched user approval
immediately before the first covered Chrome mutation. The separate secure
GitHub-token prompt, when needed, supplies a credential to the trust gate and is
not browser-control consent. The approval is neither a standing authorization
nor a generic chat instruction. The create-once
[`scoped-action-approval.schema.json`](scoped-action-approval.schema.json)
record binds the request and response to the exact release candidate, run nonce,
scope digest, executor session, distinct orchestrator session, explicit
`user-via-orchestrator` delivery role, request digest, confirmation time, and expiry.
It covers exactly these ordered actions for this single candidate run:

1. conditional Developer Mode change;
2. load and run the exact unpacked candidate;
3. conditional Full Access change;
4. save the ephemeral loopback credential;
5. clear the ephemeral loopback credential;
6. remove the exact test-owned extension;
7. restore the captured browser settings; and
8. failure rollback.

The scope is limited to loopback, the dedicated window, restoration of captured
state, and no unrelated-extension mutation. The approval is consumed before the
first covered action, cannot be replayed, and remains valid for owned cleanup if
the run fails. Any candidate, scope, session, or request-digest change invalidates
it. Expiry before consumption also fails closed.

Creating the dedicated window and navigating it to `chrome://extensions` are
intentional non-covered, low-risk setup needed to capture the exact live state
shown in the approval challenge. No covered or security-sensitive action occurs
before approval; approval and a distinct fresh state revalidation must both
precede the first such dispatch.

Every covered helper action carries the same `approvalRef`; actions outside the
scope carry `approvalRef: none`. Each action also carries a granular `riskRef`,
a create-once operator-decision digest, and its dispatch timestamp. The finalizer
checks the reference equality and time ordering. Developer Mode and Full Access
are conditional checkpoints: if their captured initial state already satisfies
the run, no toggle is dispatched, but the approval still covers the contingency.

No record claims repeated user clicks, user screenshot review, or user-authored
operator responses. After the single approval, the executor performs the entire
flow, including Chrome's token-clear confirmation and rollback when needed.

## Independent executor and reviewer

Executor UI decisions travel through create-once request/response files. The
helper chain records distinct opaque executor and reviewer session references,
an independent-session boundary, status-decision and fresh-frame-decision
counts, a response-chain digest, and deletion of the private exchange scratch.
Every frame-dependent decision must bind a fresh helper frame; exact-window
selection binds the fresh reduced status inventory instead. The finalizer checks
that request count equals status decisions plus fresh-frame decisions plus the
single scoped-approval request.

Both exchanges live in fresh owner-only, inheritance-disabled, non-reparse
directories. A request is serialized once with `FileMode.CreateNew`, atomically
published, and hashed from the exact bytes written. A response is atomically
claimed, its old pathname is reserved against replay, and its JSON and SHA-256
come from one exclusive stable read. Every response must echo the exact request
SHA-256, candidate-binding SHA-256, and `inputDigestSha256`. For helper UI
decisions, that input digest is the exact fresh PNG digest or reduced
`computer.status` response digest. For screenshot cropping it is the source PNG
digest; for the ordered six-crop review it is the canonical review-input digest.
After every response is claimed and validated, the executor exclusively re-reads
and re-hashes the exact request and every referenced frame or ordered crop before
accepting the decision or deleting scratch. Missing, reordered, extra, stale,
replayed, same-session, changed-session,
uncertain, or sensitive responses fail closed.

The coordinator prints `OPERATOR_REQUEST <absolute scratch path>` or
`REVIEWER_REQUEST <absolute scratch path>` only as a live orchestration signal;
no absolute exchange path is retained. One independent reviewer agent keeps one
opaque reviewer session reference for all UI interpretation, cropping, and six
final reviews. It writes only the exact response shape declared by each request.
The procedure assigns reviewer responses only to that reviewer session and the
user approval only to a third orchestrator session after it obtains the user's
answer to the single exact candidate-and-scope challenge. The finalizer rejects
session-reference collisions or responder-role mismatches; this is procedural
and record-level separation subject to the same-SID limitation below.

The live responder reads the request through a stable ordinary-file read. It
creates `response-<requestId>.json.new` with `FileMode.CreateNew`, writes the
complete response, calls `Flush(true)`, closes it, and atomically renames it to
`response-<requestId>.json` in the same directory. It must never write the final
pathname directly. The consumer waits while `.new` exists, atomically claims
the final file, and holds exclusive zero-byte reservations on both publication
names until exact-inventory cleanup. Partial publication, replacement, replay,
and every unregistered request, response, or frame fail closed. The response has
exactly these ordered envelope fields:

```text
schemaVersion, evidenceType, requestId, requestSha256,
candidateBindingSha256, inputDigestSha256, responderKind,
responderSessionRef, respondedAtUtc, decision
```

All binding values come from the request except `requestSha256`, which is the
SHA-256 of the exact request-file bytes, and `respondedAtUtc`, which must be a
canonical fresh timestamp inside the request's interval. Operator `decision`
has exactly one shape selected by `kind`: `{index}`, `{x,y}`, `{value}`,
`{passed}`, or—for the one user challenge only—
`{approved,approvedBy,confirmationMode}`. Reviewer `decision` is either the
exact seven-field crop verdict or the exact ordered-six-entry review verdict
described by `allowedResponse`. No compatibility aliases or human/manual
receipt fields are accepted.

Response bytes are canonical: UTF-8 without BOM, the exact property order emitted
by Windows PowerShell 5.1 `ConvertTo-Json -Depth 30 -Compress`, and exactly one LF.
Pretty JSON, CRLF, duplicate keys, case-colliding keys, reordered keys, and trailing
data are rejected. Use the shipped
[`scripts/write-stock-chrome-operator-response.ps1`](../../../scripts/write-stock-chrome-operator-response.ps1)
publisher instead of implementing this byte contract ad hoc. Any operator or
reviewer request may publish the exact negative decision `{"unable":true}`; the
consumer re-hashes its request and inputs and then enters rollback immediately.
`{"unable":false}` and mixed-field unable decisions are invalid. User denial keeps
the explicit approval shape with `approved:false`; unsafe screenshot findings keep
their detailed crop/review fields.

Distinct opaque session references and create-once digest bindings prove the
recorded protocol/session separation only. They are not cryptographic proof of
different people, Windows SIDs, or processes: software already controlling the
same owner account could forge exchange JSON. The trust boundary therefore also
depends on disciplined orchestration that assigns the executor, independent
reviewer, and user-facing approval delivery to separate live agent sessions.

The executor sanitizes six exact-window captures and creates a digest-bound
review request. A separate reviewer session opens each final PNG and produces
one create-once record conforming to
[`independent-visual-review.schema.json`](independent-visual-review.schema.json).
Its six ordered entries bind:

- sequence, purpose, and exact filename;
- final image SHA-256 and dimensions;
- the SHA-256 of the required-visible-state statement;
- digest match and required-state verdict; and
- `sensitivePixelsObserved: false` and `uncertain: false`.

Those last two values report only what the independent reviewer observed. They
are not proof that arbitrary pixels are safe. The required aggregate therefore
states `visualJudgmentNotPixelSafetyProof: true`. The protocol makes no OCR,
automated semantic-inspection, or automatic pixel-redaction claim. A reviewer
that sees sensitive content or is uncertain must fail closed; it cannot set a
passing verdict.

The six required views are:

1. the installed v0.12.68 extension and Chrome's debugger-use indicator;
2. the browser API result;
3. the exact-window computer-share action and synthetic session pointer;
4. the fail-closed paused state after visible **Stop**;
5. the fail-closed paused state after Chrome's native **Cancel**; and
6. the recovered active state after both trusted-popup resume cycles.

## Authoritative coordinator

Do not copy PowerShell fragments into a new wrapper. Run the exact source blob
[`scripts/test-windows-stock-chrome.ps1`](../../../scripts/test-windows-stock-chrome.ps1)
exactly once from a clean detached checkout. It self-spawns the exact 64-bit
Windows PowerShell 5.1 system binary with `-NoProfile`, clears its parameter
handoff variables, checks its source blob, and fails closed.

First run
[`scripts/verify-windows-release-candidate.ps1`](../../../scripts/verify-windows-release-candidate.ps1)
to bind the repository, exact `main` source commit, workflow run and attempt,
artifact ID, raw artifact-ZIP SHA-256, canonical five-file inventory, LF checksum
manifest, every payload digest, PE identity, all five GitHub attestations, and
both attestation attempt URIs. Pass its create-once `candidate-binding.json` to
the coordinator.

Choose a fresh private destination whose full path is at most 90 characters,
and pass absolute paths to ordinary `git.exe` and `gh.exe` installations. Live
mode is deliberately non-interactive: `GH_TOKEN` must already be present when
the one-shot wrapper is invoked. An absent token fails before the clean trust
child, destination, repository clone, candidate download, or candidate byte is
created or read. Never launch the wrapper under `-NonInteractive` while relying
on a prompt. The following launcher captures the current `gh` credential without
printing it, makes the token available only for the bounded wrapper call, and
then restores the caller's prior environment:

```powershell
$trustedGh = (Get-Command gh.exe).Source
$previousGhToken = [Environment]::GetEnvironmentVariable("GH_TOKEN", "Process")
$ghToken = [string](& $trustedGh auth token --hostname github.com)
if ($LASTEXITCODE -ne 0 -or [String]::IsNullOrWhiteSpace($ghToken)) {
  throw "A GitHub token is unavailable for the one-shot Windows trust gate."
}
$trustDestination = Join-Path ([IO.Path]::GetTempPath()) ("lbb-1235-" + [Guid]::NewGuid().ToString("N"))
try {
  [Environment]::SetEnvironmentVariable("GH_TOKEN", $ghToken.Trim(), "Process")
  & .\scripts\verify-windows-release-candidate.ps1 `
    -Version 0.12.68 `
    -WorkflowRunId EXACT_RUN_ID `
    -WorkflowRunAttempt EXACT_RUN_ATTEMPT `
    -ArtifactId EXACT_ARTIFACT_ID `
    -SourceSha EXACT_SOURCE_SHA `
    -Destination $trustDestination `
    -TrustedGit (Get-Command git.exe).Source `
    -TrustedGh $trustedGh
  if ($LASTEXITCODE -ne 0) { throw "The Windows trust gate failed." }
}
finally {
  [Environment]::SetEnvironmentVariable("GH_TOKEN", $previousGhToken, "Process")
  $ghToken = $null
}
```

Continue only after it prints `Windows release-candidate trust gate passed.`
Use its printed `Payload`, `Binding`, and `Source` paths verbatim. From that exact
clean checkout, create one persistent orchestrator reference and the preflight
external-surface attestation. `AttestExternalSurfaces` initializes the fresh output
directory with an owner-only protected ACL when it writes preflight:

```powershell
$orchestratorRef = & .\scripts\write-stock-chrome-operator-response.ps1 -Mode NewSessionRef
$privateParent = Join-Path ([IO.Path]::GetTempPath()) ("lbb-1235-acceptance-" + [Guid]::NewGuid().ToString("N"))
$preflightExternal = Join-Path $privateParent "external-surface-preflight.json"
$postflightExternal = Join-Path $privateParent "external-surface-postflight.json"
& .\scripts\write-stock-chrome-operator-response.ps1 `
  -Mode AttestExternalSurfaces `
  -CandidateBindingPath C:\absolute\private\candidate\candidate-binding.json `
  -ExternalSurfacePhase preflight `
  -ResponderSessionRef $orchestratorRef `
  -OutputPath $preflightExternal
```

At this point every Computer Use app-share must already be released. Invoke:

```powershell
$pipeName = "lbb-gh-" + [Guid]::NewGuid().ToString("N")
& .\scripts\test-windows-stock-chrome.ps1 `
  -FinalSha EXACT_SOURCE_SHA `
  -WorkflowRunId EXACT_RUN_ID `
  -WorkflowRunAttempt EXACT_RUN_ATTEMPT `
  -ReleaseCandidateArtifactId EXACT_ARTIFACT_ID `
  -ReleaseCandidateArtifactZipSha256 EXACT_RAW_ARTIFACT_ZIP_SHA256 `
  -ManifestSha EXACT_SHA256SUMS_SHA256 `
  -Candidate C:\absolute\private\candidate\payload `
  -CandidateBinding C:\absolute\private\candidate\candidate-binding.json `
  -PrivateParent $privateParent `
  -TrustedGit C:\absolute\trusted\git.exe `
  -TrustedGh C:\absolute\trusted\gh.exe `
  -ExternalSurfacePreflightAttestation $preflightExternal `
  -ExternalSurfacePostflightAttestation $postflightExternal `
  -GitHubTokenPipeName $pipeName
```

Remote SSH coordination is supported only when the SSH PowerShell process is in
the signed-in interactive desktop session: its `SessionId` must be greater than
zero and exactly match Explorer's session. A service or Session-0 `sshd` cannot
drive the helper UI and is unsupported. The verified portable recovery `sshd`
path satisfies this condition; every other SSH setup must prove it again before
candidate execution.

Run the coordinator asynchronously while one independent reviewer agent watches
its `OPERATOR_REQUEST` and `REVIEWER_REQUEST` lines. That reviewer keeps one fresh
64-hex reviewer reference for the whole run, obtains each exact request and named
PNG over the secured operator channel, verifies the published digests, interprets
only those exported files, and publishes its decision with:

```powershell
$reviewerRef = & .\scripts\write-stock-chrome-operator-response.ps1 -Mode NewSessionRef
& .\scripts\write-stock-chrome-operator-response.ps1 `
  -Mode Respond `
  -RequestPath C:\absolute\private\exchange\request-EXACT_ID.json `
  -ResponderKind independent-agent `
  -ResponderSessionRef $reviewerRef `
  -DecisionJson $canonicalCompactDecision
```

When the request kind is `scoped-user-approval`, the reviewer stops. The
user-facing orchestrator presents the exact candidate/scope challenge, obtains the
single real answer, and calls the same publisher with
`-ResponderKind user-via-orchestrator`, `$orchestratorRef`, and the exact approval
decision. No other request may use that role. After the six-crop review completes,
the coordinator prints `EXTERNAL_SURFACE_POSTFLIGHT_REQUIRED <path>` and waits up
to 15 minutes. The same orchestrator session then writes:

```powershell
& .\scripts\write-stock-chrome-operator-response.ps1 `
  -Mode AttestExternalSurfaces `
  -CandidateBindingPath C:\absolute\private\candidate\candidate-binding.json `
  -ExternalSurfacePhase postflight `
  -ResponderSessionRef $orchestratorRef `
  -OutputPath $postflightExternal
```

The executor rejects a different attestor/approval reference, a postflight earlier
than helper completion or independent review, a changed candidate binding, or a
postflight that does not close the exact no-Chrome-MCP/no-resumed-Computer-Use-
share interval. The reviewer uses ordinary filesystem image reads only and cannot
inspect live Chrome.

For unattended execution, the shipped responder's `RelayGitHubToken` mode creates
that fresh owner-only named-pipe server and streams exactly one independent
least-privilege GitHub token as a bounded printable-ASCII line from stdin. The
coordinator reads it byte by byte directly
into a read-only `SecureString`; the pipe name is non-secret and the token never
appears in an argument, environment variable, file, or retained output. It
exposes plaintext only inside each bounded `gh` child environment and then
clears it. If `-GitHubTokenPipeName` is omitted, the coordinator uses one secure
token prompt instead. This credential feed is independent trust-gate input, not
browser-control consent or a second user approval.

Generate the non-secret pipe name, start the coordinator with it, and within its
30-second connection deadline stream the credential from a secured controller.
For the verified recovery SSH alias, the controller command is:

```bash
gh auth token | ssh flrngel19-recovery 'C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -NoLogo -NoProfile -NonInteractive -File C:\absolute\clean\scripts\write-stock-chrome-operator-response.ps1 -Mode RelayGitHubToken -GitHubTokenPipeName lbb-gh-EXACT_FRESH_32_HEX'
```

The relay has one client, a 4096-byte maximum, and one absolute 30-second
accept/read/write/flush deadline. It never converts production credential bytes
to an immutable string and clears its one-byte transfer buffer on every exit.

For maximum unattended execution, provision that least-privilege token through
the named-pipe channel before starting the coordinator and have the
orchestrator/reviewer service ready before the first request marker appears.
The only inherently non-automatable browser-control checkpoint is the one
candidate-bound user approval above. A CAPTCHA, browser security interstitial,
unexpected account or legal prompt, permission expansion, candidate change, or
scope change is not covered by that approval and must stop for a new user
handoff; the harness must never guess through it.

The source-only smoke check is:

```powershell
& "$env:SystemRoot\System32\WindowsPowerShell\v1.0\powershell.exe" `
  -NoLogo -NoProfile -File .\scripts\test-windows-stock-chrome.ps1 -SelfTest
```

It must print exactly:

```text
Windows stock-Chrome coordinator self-test passed.
```

## Autonomous acceptance sequence

After trust and source gates pass, the coordinator and executor:

1. capture the exact Chrome-window inventory, open one dedicated stock-Chrome
   window, and navigate it to `chrome://extensions`;
2. capture candidate absence and initial Developer Mode from fresh frames, then
   create a separate fresh approval-challenge frame, request the single
   candidate-bound approval, and use one more distinct fresh frame to verify
   candidate absence, Developer Mode, and the dedicated-window binding remain
   unchanged immediately before the first covered mutation;
3. perform only required conditional toggles and load the verified directory
   with the native picker, then capture Full Access and token state before either
   is changed;
4. verify exactly one new test-owned card, version 0.12.68, no load errors, and
   popup state **Not configured** before saving the ephemeral credential;
5. run the browser API matrix, start exact-window sharing, and verify Chrome's
   native debugger-use notice;
6. exercise visible **Stop**, native **Cancel**, both fail-closed 423 refusals,
   and a fresh successful lease after each trusted-popup resume;
7. capture and sanitize the six views, then hand the immutable digest-bound
   request to the independent reviewer session;
8. clear the saved credential, accept the popup confirmation under the scoped
   approval, verify **Not configured**, restore captured settings, and remove
   only the exact test-owned extension; and
9. terminate only owned helper/server processes, release listeners and control,
   close only the dedicated window/tabs, verify executable/payload integrity,
   and delete raw images, exchange scratch, and the extracted test directory.

Switch back from the dedicated window before removal when necessary so the
helper does not confuse the target with the extensions page. Never remove,
disable, or edit another extension. Cleanup claims are passing only after fresh
live UI proves the candidate card is absent and Developer Mode, Full Access, and
saved-token state match their captured initial values. Failure cleanup uses the
same narrow ownership and scope constraints; it never broadens authority. Any
failed run deletes the entire exact test-owned partial evidence directory before
writing sanitized attempt metadata, so an uncertain or sensitive review cannot
leave a PNG or sidecar behind. The cleanup record reports the measured
`partialEvidenceDirectoryDeleted` result and uses
`sensitiveScratchDisposition: unknown` if deletion or any sensitive-scratch
cleanup cannot be proven.

## Evidence inventory and release use

Immediately before finalization, the private non-reparse evidence directory
contains exactly twenty-one ordinary files:

- nine aggregate records: `candidate-preflight.json`,
  `candidate-postflight.json`, `browser-api-matrix.json`,
  `browser-computer-helper-chain.json`, `operator-results.json`,
  `scoped-action-approval.json`, `independent-visual-review.json`,
  `external-surface-preflight.json`, and `external-surface-postflight.json`;
- six sanitized PNGs; and
- six digest-bound finalized screenshot sidecars.

The finalizer creates the twenty-second file, `browser-acceptance.json`, once. Raw
screenshots, pending-review files, request/response exchange scratch, API bodies,
credentials, tokens, filesystem paths, browser history, raw identifiers, and
external tool logs are excluded. The retained record must report exact native
`chrome://extensions` installation by the executor, all API/helper assertions,
the native debugger indication, Stop/Cancel/recovery, the one scoped approval,
the independent six-image review, restored settings, cleared credentials,
removed test identity, and complete owned-process/listener cleanup.

The aggregate operator record conforms to
[`operator-results.schema.json`](operator-results.schema.json), and the packaged
helper chain conforms to
[`computer-helper-chain.schema.json`](computer-helper-chain.schema.json).

Only after macOS quiet, macOS deliberate-concurrency, Windows helper, and this
stock-Chrome lane all pass may the allowlisted sanitized evidence enter one new
single-parent release-evidence commit whose only parent is the exact source
commit. A branch name or environment variable is a selector, never authority.
No release is published from a failed, resumed, mixed-parent, partially
reviewed, or locally-only evidence tree.
